# futhorc

./: .gitignore  .golangci.yaml  Cargo.toml  Dockerfile  README.md  base-template.html  go.mod  go.sum  index-template.html  post-template.html  rustfmt.toml
.github/workflows/: merge.yml  pr.yml  release.yaml  rust.yml
cmd/futhorc/: main.go
cmd/mdtest/: input.md  main.go
cmd/randmd/: README.md  main.go
pkg/actor/: actor.go  base.go  input.go  map.go  multi.go  output.go
pkg/futhorc/: config.go  feedbuilder.go  filecopier.go  filefinder.go  filereader.go  indexer.go  indexpageconverter.go  multichan.go  orderer.go  pageconverter.go  pipeline.go  post.go  postpageconverter.go  postparser.go  site.go  templater.go  theme.go
pkg/markdown/: convert.go
src/: build.rs  config.rs  context.rs  feed.rs  htmlrenderer.rs  lib.rs  main.rs  markdown.rs  normalize_url.rs  page.rs  parser.rs  post.rs  slice.rs  tag.rs  url.rs  util.rs  value.rs  write.rs
test-data/blog-copy/: futhorc.yaml
test-data/blog-copy/posts/: 5-myths-infra-as-code.md  benchmarking-go-and-python.md  blog-infra-updates.md  blog-infrastructure.md  changelog.md  go-getting-started.md  golang-docker-scratch-app.md  golang-interfaces-and-nil.md  golang-iterator-sketch.md  homelab-intro.md  homelab-part-i-hardware.md  installing-go-on-linux-and-osx.md  k3s-tailscale.md  macos-force-rgb.md  multiple-github-account-tips.md  software-architecture-best-practices.md  working-around-ext4-on-macos.md
test-data/blog-copy/theme/: base-template.html  index-template.html  posts-template.html  theme.yaml
test-data/blog-copy/theme/static/: style.css
test-data/performance/many-average-files/: file-585.md
test-data/posts/: alphabet.md  greet.md  haiku.md
testdata/posts/: simple.md
testdata/posts/bundle-with-asset/: index.md
testdata/posts/bundle-with-different-asset-same-name/: index.md
