[package]
name = "rust-static-site-generator"
version = "0.1.0"
authors = ["Craig Weber <weberc2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
anyhow = "1.0.38"
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"
pulldown-cmark = "0.8.0"
gtmpl = "0.6.0"
gtmpl_derive = "0.4.0"
gtmpl_value = "0.4.0"
slug = "0.1.4"
crossbeam-channel = "0.5.0"
crossbeam = "0.8.0"