[package]
name = "futhorc"
description = "A static site generator to learn Rust and to build my personal blog"
license = "GPLv3"
repository = "https://github.com/weberc2/futhorc"
version = "0.1.0"
authors = ["Craig Weber <weberc2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }
serde_yaml = "0.8.17"
pulldown-cmark = "0.8.0"
gtmpl = "0.6.0"
gtmpl_derive = "0.4.0"
gtmpl_value = "0.4.0"
slug = "0.1.4"
clap = "2.33.3"